--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
       <a class="scheme-info" 
           href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
-    <div class="centered-main-page-element">
-      <p id="top-section-for-adding-element-to-list">
+    <div class="main-block">
+      <p id="add-item">
         <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
+        <div class="task-row">
           <input id="new-task"class="task" type="text">
           <button>Add</button>
         </div>
