--- a/index.html
+++ b/index.html
@@ -7,53 +7,57 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body class="page">
-    <div class="scheme">
+    <header class="scheme">
       <img class="scheme-img" src="./eisenhower-matrix.jpg">
       <a class="scheme-info" 
           href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </div>
-    <div class="main-block">
-      <p id="add-item">
-        <label for="new-task" class="new-task-label">Add Item</label>
+    </header>
+    <main class="main-block">
+      <section id="add-item">
+        <h3 for="new-task" class="new-task-label">Add Item</h3>
         <div class="task-row">
           <input id="new-task" class="task task-input" type="text">
           <button class="button">Add</button>
         </div>
-      </p>
-      <h3 class="phase-title">Todo</h3>
-      <ul id="incomplete-tasks">
-        <li class="list-tasks">
-          <input type="checkbox" class="list-tasks-checkbox">
-          <label class="task list-tasks-label">Pay Bills</label>
-          <input type="text" class="task task-input">
-          <button class="edit button">Edit</button>
-          <button class="delete button">
-            <img class="delete-button-img" src="./remove.svg">
-          </button>
-        </li>
-        <li class="edit-mode list-tasks">
-          <input type="checkbox" class="list-tasks-checkbox">
-          <label class="task list-tasks-label">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task task-input">
-          <button class="edit button">Save</button>
-          <button class="delete button">
-            <img class="delete-button-img" src="./remove.svg">
-          </button>
-        </li>
-      </ul>
-      <h3 class="phase-title">Completed</h3>
-      <ul id="completed-tasks">
-        <li class="list-tasks">
-          <input type="checkbox" checked class="list-tasks-checkbox">
-          <label class="task list-tasks-label">See the Doctor</label>
-          <input type="text" class="task task-input">
-          <button class="edit button">Edit</button>
-          <button class="delete button">
-            <img src="./remove.svg" class="delete-button-img">
-          </button>
-        </li>
-      </ul>
-    </div>
+      </section>
+      <section>
+        <h3 class="phase-title">Todo</h3>
+        <ul id="incomplete-tasks">
+          <li class="list-tasks">
+            <input type="checkbox" class="list-tasks-checkbox">
+            <label class="task list-tasks-label">Pay Bills</label>
+            <input type="text" class="task task-input">
+            <button class="edit button">Edit</button>
+            <button class="delete button">
+              <img class="delete-button-img" src="./remove.svg">
+            </button>
+          </li>
+          <li class="edit-mode list-tasks">
+            <input type="checkbox" class="list-tasks-checkbox">
+            <label class="task list-tasks-label">Go Shopping</label>
+            <input type="text" value="Go Shopping" class="task task-input">
+            <button class="edit button">Save</button>
+            <button class="delete button">
+              <img class="delete-button-img" src="./remove.svg">
+            </button>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h3 class="phase-title">Completed</h3>
+        <ul id="completed-tasks">
+          <li class="list-tasks">
+            <input type="checkbox" checked class="list-tasks-checkbox">
+            <label class="task list-tasks-label">See the Doctor</label>
+            <input type="text" class="task task-input">
+            <button class="edit button">Edit</button>
+            <button class="delete button">
+              <img src="./remove.svg" class="delete-button-img">
+            </button>
+          </li>
+        </ul>
+      </section>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
