--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body class="page">
     <header class="scheme">
-      <img class="scheme-img" src="./eisenhower-matrix.jpg">
+      <img class="scheme-img" src="./eisenhower-matrix.jpg" alt="Scheme Eisenhower">
       <a class="scheme-info" 
           href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
@@ -29,7 +29,7 @@
             <input type="text" class="task task-input">
             <button class="edit button">Edit</button>
             <button class="delete button">
-              <img class="delete-button-img" src="./remove.svg">
+              <img class="delete-button-img" src="./remove.svg" alt="">
             </button>
           </li>
           <li class="edit-mode list-tasks">
@@ -38,7 +38,7 @@
             <input type="text" value="Go Shopping" class="task task-input">
             <button class="edit button">Save</button>
             <button class="delete button">
-              <img class="delete-button-img" src="./remove.svg">
+              <img class="delete-button-img" src="./remove.svg" alt="">
             </button>
           </li>
         </ul>
@@ -52,7 +52,7 @@
             <input type="text" class="task task-input">
             <button class="edit button">Edit</button>
             <button class="delete button">
-              <img src="./remove.svg" class="delete-button-img">
+              <img src="./remove.svg" class="delete-button-img" alt="">
             </button>
           </li>
         </ul>
